# Teleport

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  Licence.md  Notes.md  README.md  RemotePlay.sln  RemotePlay.uproject  RemotePlay_41a.py  RunClient.bat  _Unreal Libraries - Shortcut.lnk  build.gradle  index.rst  release.properties  runListen.bat  runServer.bat  settings.gradle
ClientRender/: API.cpp  API.h  Animation.cpp  Animation.h  Bone.cpp  Bone.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  CanvasTextRenderer.cpp  CanvasTextRenderer.h  Common.cpp  Common.h  DeviceContext.h  Effect.h  FontAtlas.cpp  FontAtlas.h  FrameBuffer.h  GeometryCache.cpp  GeometryCache.h  GeometryDecoder.cpp  GeometryDecoder.h  Gui.cpp  Gui.h  IndexBuffer.cpp  IndexBuffer.h  InstanceRenderer.cpp  InstanceRenderer.h  Light.cpp  Light.h  LinkRenderer.cpp  LinkRenderer.h  Material.cpp  Material.h  MemoryUtil.cpp  MemoryUtil.h  Mesh.cpp  Mesh.h  (+44 more)
ClientRender/AVParser/: BitReader.cpp  BitReader.h  HevcParser.cpp  Parser.cpp
ClientRender/NodeComponents/: AnimationComponent.cpp  AnimationComponent.h  AnimationState.cpp  AnimationState.h  Component.h  SubSceneComponent.cpp  SubSceneComponent.h  VisibilityComponent.cpp  VisibilityComponent.h
ClientRender/Shaders/: pbr.sfx
ClientRender/jni/: Android.mk
ClientRender/src/: Common.cpp  Common.h
SimulCasterAudio/: CMakeLists.txt
SimulCasterAudio/jni/: Android.mk
SimulCasterAudio/src/: AudioCommon.cpp  AudioCommon.h
SimulCasterRenderer/: CMakeLists.txt
SimulCasterRenderer/jni/: Android.mk
SimulCasterRenderer/src/: Common.cpp  Common.h
SimulCasterServer/: CMakeLists.txt
SimulCasterServer/src/: GeometryEncoder.cpp  GeometryEncoder.h  GeometryRequester.cpp  GeometryRequester.h  GeometryStore.cpp  GeometryStore.h
TeleportAudio/: AndroidAudioPlayer.cpp  AndroidAudioPlayer.h  AudioCommon.cpp  AudioCommon.h  AudioPlayer.cpp  AudioPlayer.h  AudioStreamTarget.cpp  AudioStreamTarget.h  CMakeLists.txt  CustomAudioStreamTarget.cpp  CustomAudioStreamTarget.h  NetworkPipeline.cpp  NetworkPipeline.h  PC_AudioCapture.cpp  PC_AudioCapture.h  PC_AudioPlayer.cpp  PC_AudioPlayer.h
TeleportAudio/jni/: Android.mk
TeleportAudio/src/: AudioCommon.h  Error.h
TeleportClient/: CMakeLists.txt  ClientDeviceState.cpp  ClientDeviceState.h  ClientPipeline.cpp  ClientPipeline.h  ClientTime.cpp  ClientTime.h  Config.cpp  Config.h  DiscoveryService.cpp  DiscoveryService.h  GeometryCacheBackendInterface.h  Input.cpp  Input.h  Log.cpp  Log.h  OpenXR.cpp  OpenXR.h  OpenXRRenderModel.cpp  OpenXRRenderModel.h  ServerTimestamp.cpp  ServerTimestamp.h  SessionClient.cpp  SessionClient.h  SignalingServer.cpp  SignalingServer.h  TabContext.cpp  TabContext.h  URLHandlers.cpp  URLHandlers.h  V8ProcessManager.cpp  V8ProcessManager.h  basic_linear_algebra.h
TeleportClient/jni/: Android.mk
TeleportCore/: Animation.cpp  Animation.h  AnimationInterface.h  CMakeLists.txt  CommonNetworking.h  DecodeMesh.cpp  DecodeMesh.h  ErrorHandling.cpp  ErrorHandling.h  FontAtlas.cpp  FontAtlas.h  Input.cpp  Input.h  Logging.h  Profiling.h  Protocol.h  ResourceStreams.h  StringFunctions.h  TeleportUtility.h  TextCanvas.h  Threads.h  Time.cpp  Time.h  URLParser.cpp  URLParser.h
TeleportCore/jni/: Android.mk
TeleportServer/: AudioEncodePipeline.cpp  AudioEncodePipeline.h  AudioEncoder.cpp  AudioEncoder.h  CMakeLists.txt  CaptureDelegates.h  CasterContext.h  CasterTypes.h  ClientData.cpp  ClientData.h  ClientManager.cpp  ClientManager.h  ClientMessaging.cpp  ClientMessaging.h  ClientNetworkContext.cpp  ClientNetworkContext.h  DefaultDiscoveryService.cpp  DefaultDiscoveryService.h  DefaultHTTPService.cpp  DefaultHTTPService.h  DiscoveryService.cpp  DiscoveryService.h  Export.h  Exports.h  ExtractedTypes.h  Font.cpp  Font.h  GeometryEncoder.cpp  GeometryEncoder.h  GeometryStore.cpp  GeometryStore.h  GeometryStreamingService.cpp  GeometryStreamingService.h  HTTPService.h  NetworkPipeline.cpp  NetworkPipeline.h  ServerSettings.h  SignalingService.cpp  SignalingService.h  SourceNetworkPipeline.cpp  (+8 more)
TeleportServer/Plugin/: InteropStructures.h  PluginClient.cpp  PluginClient.h  PluginGraphics.cpp  PluginMain.cpp  PluginMain.h
TeleportServer/UnityPlugin/: Export.h  InteropStructures.h  PluginClient.cpp  PluginClient.h  PluginGraphics.cpp  PluginGraphics.h  PluginMain.cpp  PluginMain.h
client/JavaScriptWorker/: CMakeLists.txt  Main.cpp  SceneObjectModel.cpp  SceneObjectModel.h  Test.cpp  index.rst  packages.config.in  test.js
docs/: CMakeLists.txt  Doxyfile.in  DoxyfileUnity.in  DoxyfileUnreal.in  clientrenderer.rst  conf.py  index.rst  introduction.rst  libavstream.rst  protocol.rst  teleportclient.rst  tidy_files.bat  unity.rst
docs/client/: index.rst
docs/nodejs/: index.rst
docs/protocol/: data_transfer.rst  discovery.rst  service.rst  signaling.rst  video.rst  video_metadata.rst
docs/reference/: AxesStandards.afdesign  animationLayers.afdesign  clientrenderer.rst  index.rst  libavstream.rst  libavstream_example.rst  server.rst  teleportclient.rst  teleportcore.rst  video_ndk_decoding.rst  video_vulkan_android_import_and_ycbcr.rst
docs/teleport_sphinx_theme/: footer.html  searchbox.html
docs/unity/: index.rst
docs/unreal/: index.rst
libavstream/: .gitignore  AndroidManifest.xml  CMakeLists.txt  CMakeSettings.json  README.md  build.gradle  deploy.ps1  gendoc.ps1  runtests.ps1
libavstream/doc/: Doxyfile  index.html
pc_client/: CMakeLists.txt  CPackOptions.cmake  ClientRenderer.cpp  ClientRenderer.h  Config.h  GeometryDecoder.cpp  GeometryDecoder.h  Gui.cpp  Gui.h  Icon.rc  Input.h  Log.cpp  Main.cpp  MemoryUtil.cpp  MemoryUtil.h  MeshCreator.cpp  MeshCreator.h  PCDiscoveryService.cpp  PCDiscoveryService.h  ProcessHandler.cpp  ProcessHandler.h  Resource.h  Resource.rc  SessionClient.cpp  SessionClient.h  UseOpenXR.cpp  UseOpenXR.h  VideoDecoder.cpp  VideoDecoder.h  client.ini  client_default.ini  index.rst  pc_client.sln  pc_client.vcxproj  pc_client.vcxproj.filters  stdafx.cpp
test/: CMakeLists.txt
(+2877 files in other folders)
